tests/baselines/reference/parser642331.errors.txt
tests/cases/conformance/parser/ecmascript5/RegressionTests/parser642331.ts(2,18): error TS1003: Identifier expected.


==== tests/cases/conformance/parser/ecmascript5/RegressionTests/parser642331.ts (1 errors) ====
    class test {
        constructor (static) { }
                     ~~~~~~
!!! error TS1003: Identifier expected.
    }
    